Fixed testing setup.